--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 spring.application.name=nick-spring17-test
 server.port=9901
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nick?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/keycode?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=sz1lzjun
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
