--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=nick-spring17-test
 server.port=9901
 #server.servlet.context-path=/musicPlayer
 
-spring.datasource.url=jdbc:mysql://192.168.3.40:3306/nick?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://192.168.3.40:3306/keycode?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
 spring.datasource.username=nick
 spring.datasource.password=sz1lzjun
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
